# phoneme-classifier

./: .flake8  .gitignore  CLAUDE.md  CTC_IMPLEMENTATION.md  CTC_SEPARATED_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MiniGameActivityideas.md  NEXT_STEPS_GUIDE.md  README.md  SUPERCLAUDE.md  classify_voice_onnx.sh  classify_voice_pkl.sh  create_temp_metadata.py  dataset.csv  label_encoder.pkl  multi_dataset.csv  phoneme_classifier.pkl  prompt.txt  pyproject.toml  requirements.txt  vocab.json
.claude/: settings.local.json
.serena/: project.yml
classification_workflow/: 0_prepare_wav_files.py  0_workflow.py  105_silence_split.py  1_retrain_augmented.py  2_extract_embeddings_for_phonemes.py  3_embeddings.py  4_batch_test_phonemes.py  5_record_voice_cli.py  6_benchmark_inference.py  old_1_extract_phonemes.py  s0_cleanup.py  s0b_augment_audio.py  s100_phoneme_wav2vec2.py  s103_classify_voice_onnx.py  s103_classify_voice_pkl.py  s104_silence_recording.py  s105_silence_split.py  s10_onnx_export.py  s11_onnx_test.py  s2_extract_embeddings_for_phonemes.py  s3_classifier_encoder.py  s4_fine_tune_on_noisy.py  s7_batch_test_phonemes.py  s8_benchmark_inference_and_save.py  s99_record_sounds_cli.py  s9_trace_mlp_classifier.py  w0_cleanup.py  w10_visualize_results.py  w11_confusion_pairs.py  w12_augment_audio.py  w12_overwrite_onnx_unreal.py  w13_extract_augmented_embeddings.py  w14_train_only.py  w15_print_label_order.py  w1_prepare_wav_files.py  w2_extract_embeddings_for_phonemes.py  w3_embeddings.py  w4_batch_test_phonemes.py  w5_record_voice_cli.py  w6_benchmark_inference_and_save.py  (+3 more)
classification_workflow/utils/: normalize_trim.py  normalize_volume_files.py
classification_workflow/validations/: classify_voice_onnx.py  record_phonemes_cli.py
configs/: temporal_config.json  temporal_config_easy.json  temporal_config_responsive.json
ctc_w2v2_workflow/: ctc_workflow.py  s3_ctc_classifier.py  test_ctc_model.py
ctc_w2v2_workflow/validations/: classify_voice_ctc.py
docs/: 1-commands-list.md  2-architecture-analysis.md  4-ctc-implementation-complete.md  6-CTC_SEPARATED_IMPLEMENTATION.md  8-ARCHITECTURAL_ANALYSIS.md  EPIC_1_COMPLETION_SUMMARY.md  MODEL_PERFORMANCE_COMPARISON.md  NEXT_STEPS_GUIDE.md  README.md  WAVLM_CTC_WORKFLOW_GUIDE.md  codebase-map.md  current-testing-framework.md  implementation.md  project-status.md  strategic-planning-framework.md
docs/1-initial/: 7-IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_AUDIT_SUMMARY.md  chat.md
docs/2-epic1/: 4-ctc-implementation-complete.md  6-CTC_SEPARATED_IMPLEMENTATION.md  EPIC1_CTC_ANALYSIS.md  EPIC_1_COMPLETION_SUMMARY.md  EPIC_1_GAP_ANALYSIS.md  WAVLM_CTC_SYSTEM_DESIGN.md  WAVLM_CTC_WORKFLOW_GUIDE.md
docs/3-epic2/: 3-Voice-Controlled-Platform.md  4-phoneme-adaptive-persistence.md  5-chat-diagnosis.md  6-ctc-architecture-fix-strategy.md  7-chat-before-error.md  8-chat-analyzing-models.md  9-analysis-after-tests.md  Epic-2-Temporal-Brain-Design.md  temporal-brain-algorithms.md
docs/6-epic5/: Epic-5-Browser-Game-Design.md
docs/7-epic6/: Epic-6-Unreal-Engine-Design.md
docs/notion/: Epic - Data Enrichment & Noise Robustness 22b502b485568027a789c927a85a096b.md  Epic - Evaluation & Progress Gates 22b502b4855680dcb4f3e071691c4957.md  Epic - Game for Data Collection 22b502b4855680dfa7d6f0c8ea071806.md  Epic - Live Phoneme CTCs 22b502b4855680149d70eec42adf84d3.md  Epic - Multi-Model Bake-off Harness 22b502b485568092ab79fe7ec3901b36.md  Epic - Personalization & Practice Packs 22b502b48556807a9d2ade60a605d358.md  Spike 001 Minimal Streaming Wav2Vec2 - CTC Pipelin 24b502b48556813a923ccc94dfd46eec.md
docs/phoneme-classification-theme-docs/: 1-commands-list.md  3-design-spec.md  4-ctc-implementation-complete.md
evaluation/: accuracy_summary_fast.json  detailed_results_fast.json  export_fused_onnx.py  live_mic_smoke.py  model_comparison_fast.py  model_comparison_test.py
evaluation/harness/: __init__.py  augmentation.py  channel_augmentation.py  dataset.py  embeddings_cache.py  full_train.py  holdout.py  learning_curve.py  loso_runner.py  models.py
game/: README.md
game/export_tool/: export_verified.py
inference/: __init__.py
inference/cli/: __init__.py  audio_capture.py  audio_feature_extractor.py  export_temporal_onnx.py  model_loader.py  phoneme_tester.py  validation_test.py
inference/temporal_brain/: __init__.py  confidence_gating.py  flicker_tracker.py  hysteresis.py  smoothing.py  temporal_processor.py
mlp_control_workflow/: 0_workflow.py  s0b_augment_audio.py  s1_prepare_wav_files.py  s4_fine_tune_on_noisy.py  s7_batch_test_phonemes.py  s8_benchmark_inference_and_save.py  s9_trace_mlp_classifier.py
mlp_control_workflow/validations/: classify_voice_pkl.py
old_src/: app_whisper.py  compile_model.py  generate_dataset_csv.py  recordings_length.py  recordings_length_summary.py  test2.py
plans/: channel-augmentation-experiment.md
plans/prds/: 07-10-2026-PRD-models-trustworthy-grill-me.txt  07-10-2026-PRD-models-trustworthy.md  07-12-2026-PRD-data-collection-game.md  07-16-2026-PRD-capacitor-mobile.md  07-16-2026-PRD-phonic-blaster.md  2026-07-11-083442-models-trustworthy-progress1.txt
research/: research-07-08-2026.md  research-report-07-08-2026.md  research-sources-07-08-2026.md
spec/: spec-architecture-phoneme-classification-workflow.md
src/: 5_record_voice_cli.py  app.py  benchmark_inference.py  clean_files.py  count_files.py  evaluate.py  generate_tokenizer.py  generate_vocab_json.py  label_encoder.pkl  main.py  phoneme_api.py  phoneme_client_cli.py  phonemes.py  record_sounds_cli.py  test.py  test3.py  train.py  validate_files.py  validate_files_smart.py
src2/: multi_phoneme.py  test4.py
tasks/: chat-spike.md  epic1_spike_001_streaming_wav2vec2_ctc.md
tests/: README.md  interactive_model_test.py  record_test_data.py  test_main.py  test_model_validation.py
tests/temporal_brain/: __init__.py  test_confidence_gating.py  test_flicker_tracker.py  test_hysteresis.py  (+1 more)
tokenizer/: phoneme_vocab.txt
w2v2-ctc_workflow/: run_spike_on_directory.py  stream_wav2vec2_ctc_spike.py
workflows/: __init__.py
(+55 files in other folders)
