[tool.poetry]
name = "phoneme-classifier"
version = "0.1.0"
description = "AI-powered phoneme classification system for children's speech recognition using Wav2Vec2 and CTC/MLP approaches"
authors = ["Phoneme Classifier Team"]
readme = "README.md"
packages = [{include = "workflows"}]

[tool.poetry.dependencies]
python = "^3.9"

# Core ML/DL Framework
torch = "2.3.1"
transformers = {extras = ["torch"], version = "4.50.3"}
accelerate = ">=0.26.0"

# Audio Processing
soundfile = "^0.12.0"
sounddevice = "^0.4.0"
librosa = "^0.10.0"
resampy = "^0.4.0"
pydub = "^0.25.0"
audiomentations = "*"
torchaudio = "2.3.1"

# Data Science
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "1.6.1"
datasets = {extras = ["audio"], version = "^2.14.0"}

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
umap-learn = "^0.5.0"

# Model Deployment
onnx = "^1.15.0"
onnxruntime = "1.19.2"

# Utilities
protobuf = "^4.25.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.18.0"
flake8 = "^6.1.0"
black = "^23.12.0"
isort = "^5.13.0"
pytest = "^7.4.0"
click = "^8.1.0"

[tool.poe]
poetry_command = ""

[tool.poe.tasks]
# =============================================================================
# SETUP & INSTALLATION TASKS
# =============================================================================

[tool.poe.tasks.install]
help = "Install all dependencies"
cmd = "poetry install"

[tool.poe.tasks.install-dev]
help = "Install all dependencies including dev tools"
cmd = "poetry install --with dev"

[tool.poe.tasks.setup]
help = "Complete setup: install pinned CPU dependencies (see docs/codebase-map.md for the verified recipe)"
cmd = "poetry install --with dev"

# =============================================================================
# TRAINING WORKFLOW TASKS
# =============================================================================

[tool.poe.tasks.train-mlp]
help = "Run MLP Control Workflow (traditional classifier)"
cmd = "python workflows/mlp_control_workflow/0_workflow.py"

[tool.poe.tasks.train-ctc]
help = "Run CTC Wav2Vec2 Workflow (sequence modeling)"
cmd = "python workflows/ctc_w2v2_workflow/0_workflow.py"

[tool.poe.tasks.train-wavlm-ctc]
help = "Run WavLM CTC Workflow (advanced sequence modeling)"
cmd = "python workflows/ctc_wavlm_workflow/0_workflow.py"

[tool.poe.tasks.train-all]
help = "Run all workflows: MLP, Wav2Vec2 CTC, and WavLM CTC"
sequence = ["train-mlp", "train-ctc", "train-wavlm-ctc"]

[tool.poe.tasks.train-ctc-all]
help = "Run both CTC workflows (Wav2Vec2 and WavLM)"
sequence = ["train-ctc", "train-wavlm-ctc"]

# =============================================================================
# TESTING & VALIDATION TASKS
# =============================================================================

# Legacy individual model tests
[tool.poe.tasks.test-pkl]
help = "Test pickle model inference (MLP workflow)"
cmd = "python workflows/mlp_control_workflow/validations/classify_voice_pkl.py"

[tool.poe.tasks.test-onnx]
help = "Test ONNX model inference (MLP workflow)"
cmd = "python workflows/mlp_control_workflow/validations/classify_voice_onnx.py"

# New validation framework with clean test recordings
[tool.poe.tasks.test-models]
help = "Run comprehensive model validation tests using clean recordings"
cmd = "python tests/test_model_validation.py"

[tool.poe.tasks.test-mlp-validation]  
help = "Test MLP Control model with clean recordings"
cmd = "python -c \"from tests.test_model_validation import ModelValidator; v=ModelValidator(); v.setup_models(); result=v.validate_mlp_model(); v.save_validation_results(result); print(f'MLP Accuracy: {result.accuracy:.1%} ({result.correct_predictions}/{result.total_tests})')\"" 

[tool.poe.tasks.test-ctc-validation]
help = "Test CTC models with clean recordings"  
cmd = "python -c \"from tests.test_model_validation import ModelValidator; v=ModelValidator(); v.setup_models(); result=v.validate_ctc_model('wavlm_ctc'); v.save_validation_results(result); print(f'CTC Accuracy: {result.accuracy:.1%} ({result.correct_predictions}/{result.total_tests})')\""

# Interactive testing commands
[tool.poe.tasks.test-mlp-interactive]
help = "Interactive MLP testing - specify phonemes and record"
cmd = "python tests/interactive_model_test.py mlp"

[tool.poe.tasks.test-ctc-interactive]  
help = "Interactive CTC testing - specify sequences and record"
cmd = "python tests/interactive_model_test.py ctc"

# Guided test data recording
[tool.poe.tasks.record-test-data]
help = "Guided recording session for all Phase 1 & 2 test sounds"
cmd = "python tests/record_test_data.py"

[tool.poe.tasks.test-ctc]
help = "Test CTC model inference (Wav2Vec2 CTC workflow)"
cmd = "python workflows/ctc_w2v2_workflow/validations/classify_voice_ctc.py"

[tool.poe.tasks.test-wavlm-ctc]
help = "Test WavLM CTC model inference (WavLM CTC workflow)"
cmd = "python workflows/ctc_wavlm_workflow/validations/classify_voice_ctc.py"

[tool.poe.tasks.test-ctc-all]
help = "Test both CTC models (Wav2Vec2 and WavLM)"
sequence = ["test-ctc", "test-wavlm-ctc"]

[tool.poe.tasks.test-all]
help = "Run all model tests (PKL, ONNX, Wav2Vec2 CTC, WavLM CTC)"
sequence = ["test-pkl", "test-onnx", "test-ctc", "test-wavlm-ctc"]

[tool.poe.tasks.record-cli]
help = "Interactive phoneme recording CLI"
cmd = "python workflows/mlp_control_workflow/validations/record_phonemes_cli.py"

# =============================================================================
# DEVELOPMENT & DEBUGGING TASKS  
# =============================================================================

[tool.poe.tasks.debug-shared]
help = "Test shared utilities import"
cmd = "python -c \"from workflows.shared.s0_s1_shared_utils import prepare_wav_files_clean, cleanup_dist; print('Import successful')\""

[tool.poe.tasks.debug-mlp]
help = "Test MLP workflow imports"
cmd = "python workflows/mlp_control_workflow/models/test_imports.py"

[tool.poe.tasks.debug-ctc]
help = "Test Wav2Vec2 CTC model structure"
cmd = "python workflows/ctc_w2v2_workflow/models/ctc_model.py"

[tool.poe.tasks.debug-wavlm-ctc]
help = "Test WavLM CTC model structure"
cmd = "python workflows/ctc_wavlm_workflow/models/ctc_model.py"

[tool.poe.tasks.debug-all-ctc]
help = "Debug both CTC model structures"
sequence = ["debug-ctc", "debug-wavlm-ctc"]

# =============================================================================
# CODE QUALITY TASKS
# =============================================================================

[tool.poe.tasks.lint]
help = "Run flake8 linting on entire project"
cmd = "flake8 workflows/ --count --select=E9,F63,F7,F82 --show-source --statistics"

[tool.poe.tasks.lint-mlp]
help = "Lint MLP workflow only"  
cmd = "flake8 workflows/mlp_control_workflow/ --count --select=E9,F63,F7,F82 --show-source --statistics"

[tool.poe.tasks.lint-ctc]
help = "Lint Wav2Vec2 CTC workflow only"
cmd = "flake8 workflows/ctc_w2v2_workflow/ --count --select=E9,F63,F7,F82 --show-source --statistics"

[tool.poe.tasks.lint-wavlm-ctc]
help = "Lint WavLM CTC workflow only"
cmd = "flake8 workflows/ctc_wavlm_workflow/ --count --select=E9,F63,F7,F82 --show-source --statistics"

[tool.poe.tasks.lint-ctc-all]
help = "Lint both CTC workflows (Wav2Vec2 and WavLM)"
sequence = ["lint-ctc", "lint-wavlm-ctc"]

[tool.poe.tasks.format]
help = "Format code with black and isort"
sequence = [
    {cmd = "black workflows/ --line-length 88"},
    {cmd = "isort workflows/ --profile black"}
]

[tool.poe.tasks.format-check]
help = "Check code formatting without making changes"
sequence = [
    {cmd = "black workflows/ --check --line-length 88"},
    {cmd = "isort workflows/ --check-only --profile black"}
]

# =============================================================================
# CLEANUP & MAINTENANCE TASKS
# =============================================================================

[tool.poe.tasks.clean]
help = "Clean build artifacts, logs, and cache"
shell = '''
rm -rf logs/*.txt
rm -rf dist/__pycache__
rm -rf workflows/**/__pycache__
rm -rf .pytest_cache
rm -rf *.egg-info
echo "🧹 Cleaned build artifacts and logs"
'''

[tool.poe.tasks.clean-models]
help = "Clean generated models and embeddings" 
shell = '''
rm -rf dist/*.pkl
rm -rf dist/*.pt  
rm -rf dist/*.onnx
rm -rf dist/phoneme_embeddings*
rm -rf dist/organized_recordings*
echo "🗑️  Cleaned generated models and data"
'''

[tool.poe.tasks.clean-all]
help = "Deep clean: artifacts, models, and Poetry cache"
sequence = ["clean", "clean-models"]

# =============================================================================
# MODEL EXPORT & DEPLOYMENT TASKS
# =============================================================================

[tool.poe.tasks.export-models]
help = "Export models to ONNX format"
sequence = [
    {cmd = "python workflows/mlp_control_workflow/s10_onnx_export.py"},
    {cmd = "python workflows/mlp_control_workflow/s11_onnx_test.py"}
]

[tool.poe.tasks.show-models]
help = "Show available trained models"
shell = '''
echo "📦 Available Models:"
ls -la dist/*.pkl dist/*.pt dist/*.onnx 2>/dev/null || echo "No models found. Run 'poe train-mlp' or 'poe train-ctc' first."
'''

# =============================================================================
# WORKFLOW SHORTCUTS & COMBINATIONS
# =============================================================================

[tool.poe.tasks.dev]
help = "Development workflow: setup + train MLP + test"
sequence = ["setup", "train-mlp", "test-pkl"]

[tool.poe.tasks.full-pipeline]
help = "Complete pipeline: train both workflows and test all models"
sequence = ["train-all", "test-all", "export-models"]

[tool.poe.tasks.quick-test]
help = "Quick validation: test shared imports and run basic MLP inference"
sequence = ["debug-shared", "test-pkl"]

# =============================================================================
# MODEL COMPARISON & ENSEMBLE TASKS
# =============================================================================

[tool.poe.tasks.compare-models]
help = "Compare MLP vs CTC model performance and characteristics"
shell = "PYTHONPATH=$PWD python workflows/shared/model_comparison.py"

[tool.poe.tasks.create-ensemble]
help = "Create ensemble methods combining MLP and CTC models"
shell = "PYTHONPATH=$PWD python workflows/shared/ensemble_methods.py"

[tool.poe.tasks.analyze-models]
help = "Run comprehensive model analysis (comparison + ensemble)"
sequence = ["compare-models", "create-ensemble"]

# =============================================================================
# EPIC 2: TEMPORAL BRAIN CLI TASKS
# =============================================================================

[tool.poe.tasks.temporal-test]
help = "Interactive temporal brain phoneme testing CLI"
cmd = "python inference/cli/phoneme_tester.py"

[tool.poe.tasks.temporal-tune]
help = "Auto-tune temporal brain parameters using voice samples"
cmd = "python inference/cli/parameter_tuner.py"

[tool.poe.tasks.temporal-baseline]
help = "Measure baseline flicker rates from Epic 1 models"
cmd = "python inference/cli/baseline_measurement.py"

[tool.poe.tasks.temporal-compare]
help = "Compare all 3 models (MLP/Wav2Vec2/WavLM) with temporal brain"
cmd = "python inference/cli/model_comparison.py"

[tool.poe.tasks.test-temporal]
help = "Run all temporal brain unit tests"
cmd = "pytest tests/temporal_brain/ -v"

# =============================================================================
# HELP & INFO TASKS  
# =============================================================================

[tool.poe.tasks.info]
help = "Show project information and available workflows"
shell = '''
echo "🎯 Phoneme Classifier Project"
echo "=============================="
echo ""
echo "📋 Available Workflows:"
echo "  • MLP Control: Traditional phoneme classification"
echo "  • CTC Wav2Vec2: Sequence-aware phoneme recognition"
echo "  • CTC WavLM: Advanced sequence-aware phoneme recognition"
echo ""  
echo "🚀 Quick Start:"
echo "  poe setup          # Install dependencies"
echo "  poe train-mlp      # Train MLP workflow"
echo "  poe test-pkl       # Test trained model"
echo ""
echo "📚 Documentation: ./docs/ and CLAUDE.md"
echo "🎮 Interactive: poe record-cli"
'''

[tool.poe.tasks.workflows]
help = "List available workflow commands"
shell = '''
echo "🔄 Training Workflows:"
echo "  poe train-mlp        - MLP Control Workflow"
echo "  poe train-ctc        - CTC Wav2Vec2 Workflow"
echo "  poe train-wavlm-ctc  - CTC WavLM Workflow"
echo "  poe train-ctc-all    - Run both CTC workflows"
echo "  poe train-all        - Run all workflows"
echo ""
echo "🧪 Testing Commands:"
echo "  poe test-pkl         - Test pickle models"
echo "  poe test-onnx        - Test ONNX models"
echo "  poe test-ctc         - Test Wav2Vec2 CTC models"
echo "  poe test-wavlm-ctc   - Test WavLM CTC models"
echo "  poe test-ctc-all     - Test both CTC models"
echo "  poe test-all         - Run all tests"
echo ""
echo "📊 Model Analysis:"
echo "  poe compare-models - Compare MLP vs CTC performance"
echo "  poe create-ensemble - Create ensemble methods"
echo "  poe analyze-models - Complete model analysis"
'''

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration  
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["workflows"]

# Flake8 configuration
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv",
    ".eggs",
    "*.egg-info",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"